<resources>
    <string name="app_name">Screening App</string>

    <string name="mensaje_ini">"WORLDWIDE REACH.\nHUMAN TOUCH."</string>
    <string name="idmarcas">ID</string>
    <string name="marcas">MARCAS</string>
    <string name="addmarcas">AGREGAR MARCAS</string>
    <string name="updatemarcas">ACTUALIZAR MARCAS</string>
    <string name="fecha">FECHA</string>
    <string name="buscar">BUSCAR</string>
    <string name="inactivas">Inactivas</string>
    <string name="description">icono base</string>
    <string name="marca">MARCA</string>
    <string name="stock">STOCK</string>
    <string name="addstock">AGREGAR STOCK</string>
    <string name="updatestock">ACTUALIZAR STOCK</string>
    <string name="tipo">TIPO</string>
    <string name="estado">ESTADO</string>
    <string name="galleta">Galleta</string>
    <string name="bebida">Bebida</string>
    <string name="activo">Activo</string>
    <string name="inactivo">Inactivo</string>
    <string name="guardar">Guardar</string>
    <string name="actualizar">Actualizar</string>
    <string name="activar">Activar Todas?</string>
    <string name="upStock">Agregar Stock?</string>
    <string name="programacion">PROGRAMACIÓN</string>
    <string name="addprog">AGREGAR PROGRAMACIÓN</string>
    <string name="updateprog">ACTUALIZAR PROGRAMACIÓN</string>
    <string name="upProg">Agregar Cantidad?</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="personal">PERSONAL</string>
    <string name="upPers">ACTUALIZAR PERSONAL</string>
    <string name="nombre">NOMBRE</string>
    <string name="paterno">1° APELLIDO</string>
    <string name="materno">2° APELLIDO</string>
    <string name="dni">DNI</string>
    <string name="correo">CORREO</string>
    <string name="rol">ROL</string>
    <string name="rol1">Admin</string>
    <string name="rol2">User</string>
    <string name="breaks">BREAKS</string>
    <string name="llaves">LLAVES</string>
    <string name="llave">N° Llave</string>
    <string name="doc">N° Doc</string>
    <string name="llavesAsig">ASIGNACIÓN</string>
    <string name="addAsig">ASIGNAR LLAVE</string>
    <string name="addOBS">Descripción (Opcional)</string>
    <string name="scan">Scan</string>
    <string name="resto">RESTO</string>
    <string name="hora">HORA</string>
    <string name="prestamo">Prest.</string>
    <string name="asignacion">Asig.</string>
    <string name="cantidad2">Cantidad.</string>
    <string name="num">N°.</string>
    <string name="numLlave">Llave N°:.</string>
    <string name="cerrar">Cerrar</string>
    <string name="siguiente">Sguiente</string>
    <string name="imagen">Imagen</string>
</resources>