<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.PersonalDetails">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/isos_transparente"
        android:contentDescription="@string/imagen"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewME"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/indigo_500"
                android:gravity="center"
                android:text="@string/upPers"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/drawable_blue">

                    <TextView
                        android:id="@+id/textViewME11"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/blue_white"
                        android:gravity="center"
                        android:text="@string/idmarcas"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/IDPE"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_blue"
                        android:gravity="center"
                        android:text="@string/idmarcas"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/drawable_blue">

                    <TextView
                        android:id="@+id/textViewME1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/blue_white"
                        android:gravity="center"
                        android:text="@string/nombre"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/NombrePE"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_blue"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="center"
                        android:hint="@string/nombre"
                        android:inputType="textPersonName"
                        android:autofillHints="name"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:background="@drawable/drawable_blue">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/blue_white"
                        android:gravity="center"
                        android:text="@string/paterno"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/Paterno"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_blue"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="center"
                        android:hint="@string/paterno"
                        android:inputType="textPersonName"
                        android:autofillHints="name"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/drawable_blue">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/blue_white"
                        android:gravity="center"
                        android:text="@string/materno"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/Materno"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_blue"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="center"
                        android:hint="@string/materno"
                        android:inputType="textPersonName"
                        android:autofillHints="name"/>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/drawable_blue">

                    <TextView
                        android:id="@+id/teViewME11"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/blue_white"
                        android:gravity="center"
                        android:text="@string/dni"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/DNI"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_blue"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="center"
                        android:hint="@string/dni"
                        android:inputType="number"
                        android:maxLength="12"
                        android:autofillHints="creditCardNumber"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/drawable_blue">

                    <TextView
                        android:id="@+id/textewME1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/blue_white"
                        android:gravity="center"
                        android:text="@string/correo"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/Correo"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_blue"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="center"
                        android:hint="@string/correo"
                        android:inputType="textPersonName"
                        android:autofillHints="emailAddress"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:background="@drawable/drawable_blue">

                    <TextView
                        android:id="@+id/xtView4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/blue_white"
                        android:gravity="center"
                        android:text="@string/rol"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_blue"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/Rol1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:enabled="false"
                            android:text="@string/rol1" />

                        <RadioButton
                            android:id="@+id/Rol2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:enabled="false"
                            android:text="@string/rol2" />

                    </RadioGroup>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/drawable_blue">

                    <TextView
                        android:id="@+id/xtView5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/blue_white"
                        android:gravity="center"
                        android:text="@string/estado"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_blue"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/ActivoPE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:enabled="false"
                            android:text="@string/activo" />

                        <RadioButton
                            android:id="@+id/InactivoPE"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:enabled="false"
                            android:text="@string/inactivo" />

                    </RadioGroup>


                </TableRow>

            </TableLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/ActiPer"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="ActiPers"
                android:text="@string/activar" />

            <Button
                android:id="@+id/ActuPer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:enabled="false"
                android:text="@string/actualizar" />

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>